fixing white space on ios issue

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ button:hover{
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  overflow: hidden;
 }
 
 /* Media queries */
